tests/files/lexer_tests/should_fail/112.cmdr
//Should not parse due to unterminated scope
while (true) {echo hi;